added the caroussel

--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image" href="assets/heartTransparent.png"/>
   <title>Love</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image" href="assets/heartTransparent.png"/>
 </head>
 <body>
   <h1>❤️Fulano<br>&<br>Ciclana❤️</h1>
@@ -27,25 +27,23 @@
   <h2 style="color: #eaf2d7; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">Para: Ciclana❤️</h2>
   <br><br><br>
 
+  <div class="carrossel">
+    <div class="slides" id="slides">
+      <img src="assets/fotoboa6.jpg">
+      <img src="assets/fotoboa2.jpg">
+      <img src="assets/casais3.jpg">
+      <img src="assets/couple01.jpg">
+      <img src="assets/photo02.jpg">
+      <img src="assets/fotoboa5.jpg">
+    </div>
+    <button id="prev" class="btn">❮</button>
+    <button id="next" class="btn">❯</button>
+    <div class="dots" id="dots"></div>
+  </div>
 
-  <div class="carrossel-container">
-  <div class="carrossel-slides">
-    <img src="assets/casais1.jpeg" alt="Imagem 1">
-    <img src="assets/casais2.jpg" alt="Imagem 2">
-    <img src="assets/casais3.jpg" alt="Imagem 3">
-    <img src="assets/couple01.jpg" alt="Imagem 4">
-    <img src="assets/photo02.jpg" alt="Imagem 5">
-    <img src="assets/photo05.jpeg" alt="Imagem 6">
-  </div>
-  <div class="dots">
-    <span class="dot active"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-  </div>
+
+
+
 
 
 
