--- a/main.html
+++ b/main.html
@@ -8,11 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image" href="assets/heartTransparent.png"/>
+  <link rel="icon" type="image" href="/assets/heartTransparent.png"/>
 </head>
 <body>
+  <div class="hearts-container" id="heartsContainer"></div>
+  
   <h1>❤️Fulano<br>&<br>Ciclana❤️</h1>
-  <div class="container">
+  <div class="container01">
     <h1>💞 JUNTOS POR 💞</h1>
     <div id="timer">
       <div id="years"></div>
@@ -21,11 +23,11 @@
     </div>
   </div>
 
-  <img id="heart" src="assets/heartTransparent.png" alt="Heart Image">
+  <img id="heart01" src="assets/heartTransparent.png" alt="Heart Image">
 
   <h1>Nosso Amor</h1>
   <h2 style="color: #eaf2d7; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">Para: Ciclana❤️</h2>
-  <br><br><br>
+  <br><br>
 
   <div class="carrossel">
     <div class="slides" id="slides">
@@ -40,6 +42,51 @@
     <button id="next" class="btn">❯</button>
     <div class="dots" id="dots"></div>
   </div>
+  <br><br> 
+
+  <div class="romantic-box">
+  <div class="heart02"></div>
+  <div class="floating-hearts02">
+    <div class="floating-heart02"></div>
+    <div class="floating-heart02"></div>
+    <div class="floating-heart02"></div>
+    <div class="floating-heart02"></div>
+    <div class="floating-heart02"></div>
+  </div>
+    <div class="stars" id="stars"></div>
+    <h2 class="title">Para Você ❤️</h2>
+    <p class="message">
+      Escreva uma mensagem para o seu bem com todo carinho aqui, você pode pedir 
+    por outras mudanças no site também😉
+    </p>
+    <p class="signature">Com todo meu amor,<br>Seu amor</p>
+  </div>
+
+  <div class="wrap">
+    <div class="card">
+      <svg id="svgStage" viewBox="0 0 800 800" preserveAspectRatio="xMidYMid meet" aria-label="Foto em formato de coração">
+        <defs>
+          <clipPath id="heartClip">
+            <path d="M400 680 C320 600 160 520 200 390 C250 240 360 220 400 300 C440 220 550 240 600 390 C640 520 480 600 400 680 Z" />
+          </clipPath>
+          <mask id="revealMask">
+            <image id="maskImage" href="" x="0" y="0" width="800" height="800" preserveAspectRatio="none" />
+          </mask>
+        </defs>
+        <image id="photo" href="assets/fotoboa1.jpg" x="0" y="0" width="800" height="800" preserveAspectRatio="xMidYMid slice" clip-path="url(#heartClip)" mask="url(#revealMask)"/>
+        <path d="M400 680 C320 600 160 520 200 390 C250 240 360 220 400 300 C440 220 550 240 600 390 C640 520 480 600 400 680 Z" fill="none" stroke="rgba(0,0,0,0.8)" stroke-width="6"/>
+      </svg>
+      <div class="hint">Raspe para revelar...</div>
+    </div>
+  </div>
+  <h1>❤️Fulano<br>&<br>Ciclana❤️</h1>
+
+  <audio id="song01">
+    <source src="assets/LoveSong02.m4a" type="audio/mp4">
+    <source src="assets/LoveSong02.mp3" type="audio/mpeg">
+    Seu navegador não suporta o elemento de áudio.
+  </audio>
+
 
 
 
